--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ahmetomer.net</title>
+    <title>Contact - ahmetomer.net</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
@@ -70,44 +70,47 @@
             text-decoration: underline;
         }
 
-        .blog-links {
+        .contact-links {
             background: white;
             border-radius: 5px;
             box-shadow: 0 1px 4px rgba(32, 33, 36, 0.20);
             overflow: hidden;
         }
 
-        .blog-link {
+        .contact-link {
             display: block;
-            padding: 16px 20px;
+            padding: 20px;
             text-decoration: none;
             color: #1a0dab;
             border-bottom: 1px solid #f1f3f4;
             transition: background-color 0.2s;
         }
 
-        .blog-link:last-child {
+        .contact-link:last-child {
             border-bottom: none;
         }
 
-        .blog-link:hover {
+        .contact-link:hover {
             background-color: #f8f9fa;
         }
 
-        .link-title {
+        .contact-title {
             font-size: 18px;
             font-weight: 500;
             margin-bottom: 4px;
             color: #1a0dab;
+            display: flex;
+            align-items: center;
         }
 
-        .link-url {
-            font-size: 14px;
-            color: #1a0dab;
-            margin-bottom: 4px;
+        .contact-icon {
+            width: 20px;
+            height: 20px;
+            margin-right: 10px;
+            border-radius: 2px;
         }
 
-        .link-description {
+        .contact-description {
             font-size: 14px;
             color: #5f6368;
             line-height: 1.4;
@@ -129,10 +132,6 @@
             .header h1 {
                 font-size: 2rem;
             }
-            
-            .search-input {
-                max-width: 100%;
-            }
         }
     </style>
 </head>
@@ -151,13 +150,38 @@
             </ul>
         </div>
 
-        <div class="blog-links" id="blogLinks">
-            <a href="posts/getting-started.html" class="blog-link">
-                <div class="link-title">Getting Started with Web Development</div>
-                <div class="link-url">myblog.com/posts/getting-started</div>
-                <div class="link-description">A beginner's guide to web development, covering HTML, CSS, and JavaScript fundamentals. Learn the basics of creating your first website.</div>
+        <div class="contact-links" id="contactLinks">
+            <a href="mailto:ahmetomerv@gmail.com" class="contact-link">
+                <div class="contact-title">
+                    <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
+                    </svg>
+                    Email
+                </div>
+                <div class="contact-description">ahmetomerv@gmail.com</div>
+            </a>
+
+            <a href="https://x.com/eswordert" target="_blank" class="contact-link">
+                <div class="contact-title">
+                    <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                    </svg>
+                    X (Twitter)
+                </div>
+                <div class="contact-description">@eswordert</div>
+            </a>
+
+            <a href="https://instagram.com/ahmetoemer" target="_blank" class="contact-link">
+                <div class="contact-title">
+                    <svg class="contact-icon" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+                    </svg>
+                    Instagram
+                </div>
+                <div class="contact-description">@ahmetoemer</div>
             </a>
         </div>
+
         <div class="footer">
             <p>&copy; 2025. All rights reserved. (I guess)</p>
         </div>
