Update blog links in index.html and add new "Hello World" post

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
         </div>
 
         <div class="blog-links" id="blogLinks">
-            <a href="posts/getting-started.html" class="blog-link">
-                <div class="link-title">Getting Started with Web Development</div>
-                <div class="link-url">myblog.com/posts/getting-started</div>
-                <div class="link-description">A beginner's guide to web development, covering HTML, CSS, and JavaScript fundamentals. Learn the basics of creating your first website.</div>
+            <a href="posts/hello-world.html" class="blog-link">
+                <div class="link-title">Hello World</div>
+                <div class="link-url">myblog.com/posts/hello-world</div>
+                <div class="link-description">This is a test post to see if the blog links are working.</div>
             </a>
         </div>
         <div class="footer">
