Add Simple Analytics script to contact, index, projects, and hello-world pages for enhanced privacy-first tracking

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
     <link rel="manifest" href="assets/site.webmanifest">
+    <!-- Simple Analytics - 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js" data-collect-dnt="true"></script>
     <style>
         * {
             margin: 0;
