Refactor styles by moving inline CSS from index.html, projects.html, and hello-world.html to a new external stylesheet (assets/styles.css) for improved maintainability and consistency.

--- a/index.html
+++ b/index.html
@@ -11,154 +11,7 @@
     <link rel="manifest" href="assets/site.webmanifest">
     <!-- Simple Analytics - 100% privacy-first analytics -->
     <script async src="https://scripts.simpleanalyticscdn.com/latest.js" data-collect-dnt="true"></script>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e5ebed;
-            color: #202124;
-            line-height: 1.6;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 40px;
-            padding: 20px 0;
-        }
-
-        .header h1 {
-            font-size: 2.5rem;
-            color: #1a73e8;
-            margin-bottom: 10px;
-            font-weight: normal;
-        }
-
-        .header p {
-            color: #5f6368;
-            font-size: 1.1rem;
-        }
-
-        .nav-bar {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .nav-links {
-            list-style: none;
-        }
-
-        .nav-links li {
-            display: inline;
-            margin: 0 20px;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: #1a0dab;
-        }
-
-        .nav-links a:hover {
-            text-decoration: underline;
-        }
-
-        .contact-icons {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .contact-icons a {
-            display: inline-block;
-            margin: 0 15px;
-            color: #1a0dab;
-            text-decoration: none;
-            transition: opacity 0.2s;
-        }
-
-        .contact-icons a:hover {
-            opacity: 0.7;
-        }
-
-        .contact-icon {
-            width: 24px;
-            height: 24px;
-        }
-
-        .blog-links {
-            background: white;
-            border-radius: 5px;
-            box-shadow: 0 1px 4px rgba(32, 33, 36, 0.20);
-            overflow: hidden;
-        }
-
-        .blog-link {
-            display: block;
-            padding: 16px 20px;
-            text-decoration: none;
-            color: #1a0dab;
-            border-bottom: 1px solid #f1f3f4;
-            transition: background-color 0.2s;
-        }
-
-        .blog-link:last-child {
-            border-bottom: none;
-        }
-
-        .blog-link:hover {
-            background-color: #f8f9fa;
-        }
-
-        .link-title {
-            font-size: 18px;
-            font-weight: 500;
-            margin-bottom: 4px;
-            color: #1a0dab;
-        }
-
-        .link-url {
-            font-size: 14px;
-            color: #1a0dab;
-            margin-bottom: 4px;
-        }
-
-        .link-description {
-            font-size: 14px;
-            color: #5f6368;
-            line-height: 1.4;
-        }
-
-        .footer {
-            text-align: center;
-            margin-top: 40px;
-            padding: 20px 0;
-            color: #5f6368;
-            font-size: 14px;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                padding: 10px;
-            }
-            
-            .header h1 {
-                font-size: 2rem;
-            }
-            
-            .search-input {
-                max-width: 100%;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
     <div class="container">
