Update project links in projects.html to include full URLs; enhance styles in assets/styles.css by adjusting font weights and colors for better readability and aesthetics.

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
                     <img src="https://activiews.xyz/assets/favicons/apple-touch-icon.png" alt="" class="favicon" onerror="this.style.display='none'">
                     Activiews
                 </div>
-                <div class="link-url">activiews.xyz</div>
+                <div class="link-url">https://activiews.xyz</div>
                 <div class="link-description">A privacy-first fitness companion for Apple workouts that helps you visualize and track your activities. Features workout cards, activity lists, map views, calendar tracking, and flyover visualization.</div>
             </a>
 
@@ -61,8 +61,17 @@
                     <img src="https://infinitedeutsch.com/assets/favicon.ico" alt="" class="favicon" onerror="this.style.display='none'">
                     InfiniteDeutsch
                 </div>
-                <div class="link-url">infinitedeutsch.com</div>
+                <div class="link-url">https://infinitedeutsch.com</div>
                 <div class="link-description">Directory of resources for learning German.</div>
+            </a>
+
+            <a href="https://cargptapp.com" target="_blank" class="project-link">
+                <div class="link-title">
+                    <img src="https://cargptapp.com/assets/logo.png" alt="" class="favicon" onerror="this.style.display='none'">
+                    CarGPT
+                </div>
+                <div class="link-url">https://cargptapp.com</div>
+                <div class="link-description">AI car identification app.</div>
             </a>
         </div>
         <div class="footer">
