Refactor project descriptions in projects.html for clarity; reintroduce InfiniteDeutsch project link with updated description for consistency.

--- a/projects.html
+++ b/projects.html
@@ -54,16 +54,7 @@
                     Activiews
                 </div>
                 <div class="link-url">https://activiews.xyz</div>
-                <div class="link-description">A privacy-first fitness companion for Apple workouts that helps you visualize and track your activities. Features workout cards, activity lists, map views, calendar tracking, and flyover visualization.</div>
-            </a>
-
-            <a href="https://infinitedeutsch.com" target="_blank" class="project-link">
-                <div class="link-title">
-                    <img src="https://infinitedeutsch.com/assets/favicon.ico" alt="" class="favicon" onerror="this.style.display='none'">
-                    InfiniteDeutsch
-                </div>
-                <div class="link-url">https://infinitedeutsch.com</div>
-                <div class="link-description">Directory of resources for learning German.</div>
+                <div class="link-description">A privacy-first fitness alternative for Apple workouts that helps you visualize and track your activities.</div>
             </a>
 
             <a href="https://cargptapp.com" target="_blank" class="project-link">
@@ -73,6 +64,15 @@
                 </div>
                 <div class="link-url">https://cargptapp.com</div>
                 <div class="link-description">AI car identification app.</div>
+            </a>
+
+            <a href="https://infinitedeutsch.com" target="_blank" class="project-link">
+                <div class="link-title">
+                    <img src="https://infinitedeutsch.com/assets/favicon.ico" alt="" class="favicon" onerror="this.style.display='none'">
+                    InfiniteDeutsch
+                </div>
+                <div class="link-url">https://infinitedeutsch.com</div>
+                <div class="link-description">Directory of resources for learning German.</div>
             </a>
         </div>
         <div class="footer">
