Add LangFlick project link to projects.html with description and icon; enhance resource directory for language learning.

--- a/projects.html
+++ b/projects.html
@@ -74,6 +74,15 @@
                 <div class="link-url">https://infinitedeutsch.com</div>
                 <div class="link-description">Directory of resources for learning German.</div>
             </a>
+
+            <a href="https://apps.apple.com/us/app/langflick/id6746555698?platform=iphone" target="_blank" class="project-link">
+                <div class="link-title">
+                    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a0/26/08/a02608e4-ae74-36e5-4a7f-bd5a791008f0/AppIcon-0-0-1x_U007epad-0-1-85-220.png/460x0w.webp" alt="" class="favicon" onerror="this.style.display='none'">
+                    LangFlick
+                </div>
+                <div class="link-url">https://apps.apple.com</div>
+                <div class="link-description">TikTok-like app with infinite scroll but with language learning content.</div>
+            </a>
         </div>
         <div class="footer">
             <p>&copy; 2025. All rights reserved. (I guess)</p>
