--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <!-- Simple Analytics - 100% privacy-first analytics -->
     <script async src="https://scripts.simpleanalyticscdn.com/latest.js" data-collect-dnt="true"></script>
     <link rel="stylesheet" href="assets/styles.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEENFCNT28"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VEENFCNT28');
+    </script>
 </head>
 <body>
     <div class="container">
