Update blog link URL in index.html for accuracy and modify hover styles in assets/styles.css for improved aesthetics and consistency.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="blog-links" id="blogLinks">
             <a href="posts/hello-world.html" class="blog-link">
                 <div class="link-title">Hello World</div>
-                <div class="link-url">myblog.com/posts/hello-world</div>
+                <div class="link-url">https://blog.ahmetomer.net/posts/hello-world.html</div>
                 <div class="link-description">This is a test post to see if the blog links are working.</div>
             </a>
         </div>
