Add email copying functionality with tooltip in assets/script.js; include script references in about.html, index.html, projects.html, and hello-world.html; enhance styles for tooltip in assets/styles.css.

--- a/projects.html
+++ b/projects.html
@@ -89,5 +89,7 @@
             <p>&copy; 2025. All rights reserved. (I guess)</p>
         </div>
     </div>
+
+    <script src="assets/script.js"></script>
 </body>
 </html> 
