--- a/about.html
+++ b/about.html
@@ -72,5 +72,7 @@
             <p>&copy; 2025. All rights reserved. (I guess)</p>
         </div>
     </div>
+
+    <script src="assets/script.js"></script>
 </body>
 </html>
