--- a/index.html
+++ b/index.html
@@ -59,5 +59,7 @@
             <p>&copy; 2025. All rights reserved. (I guess)</p>
         </div>
     </div>
+
+    <script src="assets/script.js"></script>
 </body>
 </html> 
