--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,11 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Ahmet Ömer</h1>
+            <h1>
+                <a href="index.html">
+                    Ahmet Ömer
+                </a>
+            </h1>
         </div>
 
         <div class="nav-contact-container">
