Add mojicado project link to projects.html with description and icon; update styles for project links in assets/styles.css to improve layout.

--- a/projects.html
+++ b/projects.html
@@ -89,6 +89,18 @@
                 <div class="link-description">TikTok-like app with infinite scroll but with language learning content.</div>
             </a>
         </div>
+
+        <div class="project-links" id="projectLinks">
+            <a href="https://mojicado.ahmetomer.net" target="_blank" class="project-link">
+                <div class="link-title">
+                    <img src="https://mojicado.ahmetomer.net/assets/apple-touch-icon.png" alt="" class="favicon" onerror="this.style.display='none'">
+                    mojicado
+                </div>
+                <div class="link-url">https://mojicado.ahmetomer.net</div>
+                <div class="link-description">An emoji wallpaper generator.</div>
+            </a>            
+        </div>
+
         <div class="footer">
             <p>&copy; 2025. All rights reserved. (I guess)</p>
         </div>
