Add RetroMockup project link to projects.html with description and icon for enhanced project showcase.

--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,15 @@
                 </div>
                 <div class="link-url">https://mojicado.ahmetomer.net</div>
                 <div class="link-description">An emoji wallpaper generator.</div>
-            </a>            
+            </a>
+            <a href="https://retro-mockup.ahmetomer.net" target="_blank" class="project-link">
+                <div class="link-title">
+                    <img src="https://retro-mockup.ahmetomer.net/assets/apple-touch-icon.png" alt="" class="favicon" onerror="this.style.display='none'">
+                    RetroMockup.exe
+                </div>
+                <div class="link-url">https://retro-mockup.ahmetomer.net</div>
+                <div class="link-description">A retro-style product mockup generator.</div>
+            </a>
         </div>
 
         <div class="footer">
