--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li><a href="workout.html">Workout</a></li>
                 </ul>
             </div>
 
