--- a/workout.html
+++ b/workout.html
@@ -64,9 +64,9 @@
                     <ol>
                         <li><strong>Barbell Bench Press</strong> (or Floor Press) – 4×10</li>
                         <li><strong>Overhead Press</strong> (Barbell or Dumbbells) – 4×10</li>
-                        <li><strong>Incline Dumbbell Press</strong> – 3×10</li>
+                        <li><strong>Standing Dumbbell Press</strong> – 3×10</li>
                         <li><strong>Dumbbell Lateral Raises</strong> – 3×10</li>
-                        <li><strong>Close-Grip Push-Ups</strong> (weighted if possible) – 3×10</li>
+                        <li><strong>Close-Grip Push-Ups</strong> – 3×10</li>
                     </ol>
                 </div>
 
